| Bug #19067 | Partitions: crash if subpartition and alter | ||
|---|---|---|---|
| Submitted: | 12 Apr 2006 23:59 | Modified: | 7 Jun 2006 12:08 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Partitions | Severity: | S3 (Non-critical) |
| Version: | 5.1.10-beta-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Mikael Ronström | CPU Architecture: | Any |
[12 Apr 2006 23:59]
Peter Gulutzan
[13 Apr 2006 2:06]
MySQL Verification Team
Thank you for the bug report.
060412 23:07:55 [Note] /home/miguel/dbs/5.1/libexec/mysqld: ready for connections.
Version: '5.1.10-beta-debug' socket: '/tmp/mysql.sock' port: 3306 Source distribution
[New Thread 1119902640 (LWP 7245)]
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 1119902640 (LWP 7245)]
0x083995a6 in partition_info::check_partition_info (this=0x9244a38, eng_type=0x0, file=0x9244650, max_rows=0)
at partition_info.cc:712
712 if (part_elem->engine_type == NULL)
(gdb)
[3 Jun 2006 18:46]
Mikael Ronström
Patch will appear in 5.1.12
[7 Jun 2006 12:08]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented fix in 5.1.12 changelog. Closed.
