sql/partition_info.cc
@@ -265,7 +265,7 @@ bool partition_info::set_up_default_subpartitions(handler *file,
     j= 0;
     do
     {
-      partition_element *subpart_elem= new partition_element();
+      partition_element *subpart_elem= new partition_element(part_elem);
       if (likely(subpart_elem != 0 &&
           (!part_elem->subpartitions.push_back(subpart_elem))))
       {
@@ -718,6 +718,8 @@ bool partition_info::check_partition_info(handlerton **eng_type,
     do
     {
       partition_element *part_elem= part_it++;
+      if (part_elem->engine_type == NULL)
+        part_elem->engine_type= default_engine_type;
       if (!is_sub_partitioned())
       {
         if (check_table_name(part_elem->partition_name,
@@ -726,8 +728,6 @@ bool partition_info::check_partition_info(handlerton **eng_type,
           my_error(ER_WRONG_PARTITION_NAME, MYF(0));
           goto end;
         }
-        if (part_elem->engine_type == NULL)
-          part_elem->engine_type= default_engine_type;
         DBUG_PRINT("info", ("engine = %d",
                    ha_legacy_type(part_elem->engine_type)));
         engine_array[part_count++]= part_elem->engine_type;
